# Quest-for-the-Lost-Pixels

./: .gitignore  CMakeLists.txt  CMakePresets.json  Format.DotSettings  RunVisualWindows.bat  RunVisualWindowsRelease.bat  bez nazwy.tiled-session
.github/workflows/: build-and-release-linux.yml  build-and-release-windows.yml  zip-assets.yml
assets/: config.json
assets/floorAtlas/: CosmicLilac.xcf  credits.txt
assets/fonts/: credits.txt
assets/maps/: map_02.json  map_04.json  map_1.json  map_10.json  map_11.json  map_12.json  map_13.json  map_14.json  map_15.json  map_16.json  map_2.json  map_3.json  map_4.json  map_5.json  map_6.json  map_7.json  map_8.json  map_9.json  map_b1.json  map_b2.json  map_b3.json  map_b4.json  map_s1.json  map_s10.json  map_s12.json  map_s15.json  map_s2.json  map_s6.json  map_s9.json
assets/maps/floor_00/: map_0.json  map_110.json
assets/maps/floor_01/: map_1.json  map_10.json  map_11.json  map_110.json  map_12.json  map_13.json  map_14.json  map_15.json  map_16.json  map_17.json  map_18.json  map_19.json  map_20.json  map_21.json  map_22.json  map_23.json  map_24.json  map_25.json  map_3.json  map_4.json  map_5.json  map_6.json  map_7.json  map_8.json  map_9.json  map_b1.json  map_b2.json  map_b3.json  map_b4.json  map_s1.json  map_s10.json  map_s11.json  map_s12.json  map_s13.json  map_s14.json  map_s15.json  map_s2.json  map_s3.json  map_s4.json  map_s5.json  (+4 more)
assets/player/: AnimSlimes.json
assets/shaders/: fragment_shader.frag  grayscale.frag  vertex_shader.vert
assets/sounds/: credits.txt
assets/tileSets/: AnimSlimes.json  Armour.json  Bullets.json  Characters.json  CosmicLegacy.json  CosmicLilac.json  CosmicLilacTiles.json  Decorative.json  DungeonWalls.json  Graveyard.json  Items.json  Jungle.json  Portal.json  SmokeAnimations.json  SpecialBlocks.json  Swamp.json  Weapons.json
deployment/appimage/: AppRun  qlp.desktop
deployment/arch/: Dockerfile
deployment/ubuntu/: Dockerfile
deployment/ubuntu-22/: Dockerfile
deployment/ubuntu-24/: Dockerfile
resources/FirstFloorAtlas/: background_01.mtpf  background_0_2.mtpf  example.mtpf
resources/Maps/: Maps.mtpf  map_01.json  map_01.tmj  map_02.json  map_03.json  map_04.json
resources/Player/: AnimSlimes.json  player.mtpf
resources/TileSets/: AnimSlimes.json  CosmicLilacTiles.json  Decorative.json  DungeonWalls.json  EnchantedForestAnimation.json  Graveyard  Graveyard.json  Jungle.json  RetroAdventure.json
src/: CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  Game.cpp  Game.h  System.h  SystemManager.cpp  SystemManager.h  Types.h  main.cpp
src/AtlasComponents/: Helpers.cpp  Layer.cpp  Layer.h  Map.h  Room.cpp  Room.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Tile.cpp  Tile.h  Tileset.h
src/Components/: AnimationComponent.h  AnimationFrame.h  BindSwingWeaponEvent.h  BodyArmourComponent.h  BulletComponent.h  CharacterComponent.h  ChestComponent.h  ColliderComponent.h  CreateBodyWithCollisionEvent.h  DealDMGToEnemyEvent.h  DirtyFlagComponent.h  DoorComponent.h  EnemyComponent.h  EquipmentComponent.h  EquippedHelmetComponent.h  EquippedWeaponComponent.h  FightActionEvent.h  FloorComponent.h  HelmetComponent.h  InventoryComponent.h  ItemAnimationComponent.h  ItemComponent.h  LayerComponent.h  LootComponent.h  MapComponent.h  MultiplayerComponent.h  PassageComponent.h  PlayerComponent.h  PositionComponent.h  PotionComponent.h  RenderComponent.h  RoomComponent.h  SoundComponent.h  SpawnerComponent.h  SynchronisedEvent.h  TextTagComponent.h  TileComponent.h  TransformComponent.h  TravellingDungeonComponent.h  WeaponComponent.h  (+1 more)
src/Core/: ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Coordinator.cpp  Coordinator.h  EntityManager.cpp  EntityManager.h  IComponentArray.h  InputHandler.cpp  InputHandler.h  Physics.cpp  Physics.h  ServerEntityManager.cpp  ServerEntityManager.h  System.h  SystemManager.cpp  SystemManager.h  Types.h
src/EventSystems/: FightSystem.cpp  FightSystem.h  ObjectCreatorSystem.cpp  ObjectCreatorSystem.h
src/Map/: Dungeon.cpp  Dungeon.h  DungeonGenerator.cpp  DungeonGenerator.h  FloorGenerator.cpp  FloorGenerator.h  Room.cpp  Room.h
src/MenuStateMachine/: EndGameState.cpp  EndGameState.h  GameState.cpp  GameState.h  LooseGameState.cpp  LooseGameState.h  LostGameState.cpp  LostGameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/Sounds/: SoundManager.h  SoundPlayer.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  BulletSystem.cpp  BulletSystem.h  CharacterSystem.cpp  CharacterSystem.h  ChestSpawnerSystem.cpp  ChestSpawnerSystem.h  ChestSystem.cpp  ChestSystem.h  CollisionSystem.cpp  CollisionSystem.h  DealDMGToEnemySystem.cpp  DealDMGToEnemySystem.h  DoorSystem.cpp  DoorSystem.h  EnemySystem.cpp  EnemySystem.h  EquipWeaponSystem.cpp  EquipWeaponSystem.h  HealthBarSystem.cpp  HealthBarSystem.h  InventorySystem.cpp  InventorySystem.h  ItemSpawnerSystem.cpp  ItemSpawnerSystem.h  ItemSystem.cpp  ItemSystem.h  LootSpawnerSystem.cpp  LootSpawnerSystem.h  LootSystem.cpp  LootSystem.h  MapSystem.cpp  MapSystem.h  MultiplayerSystem.cpp  MultiplayerSystem.h  ObjectCreatorSystem.cpp  ObjectCreatorSystem.h  PassageSystem.cpp  PassageSystem.h  (+20 more)
src/Ui/: Button.cpp  Button.h  ButtonDTO.h  Graphics.cpp  Graphics.h  InputText.cpp  InputText.h  InputTextDTO.h  PlayerStatsGUI.cpp  PlayerStatsGUI.h  ResourceManager.h  Text.cpp  Text.h  TextDTO.h
src/UiComponents/: ButtonComponent.h  UiComponent.h
src/UiSystems/: BackgroundSystem.cpp  BackgroundSystem.h  ButtonSystem.cpp  ButtonSystem.h  HealthBarSystem.cpp  HealthBarSystem.h
src/Utils/: Camera.h  CircularIterator.h  Config.h  GameTypes.h  GameUtility.h  Helpers.cpp  Helpers.h  MapParser.h  Paths.h  PublicConfig.h  PublicConfigMenager.h  TextureParser.h  Timer.cpp  Timer.h
zlib-1.3.1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example  example64  libz.so.1.3.1  minigzip  minigzip64
(+26 files in other folders)
